      and package-installs-apt-sources.  (Closes: #814521).
    + [NT] Apply patch from Helmut Grohne to detect some possible invalid
      uses of "Multi-Arch: foreign".  (Closes: #856975)
    + [NT] Improve the empty-binary-package tag by adding more common
      files that should be ignored.  Thanks to Helmut Grohne for all the
      research behind it.  (Closes: #856857)
  * checks/menu-format.{desc,pm}:
    + [NT] Update the reference to Desktop Entry Specification to point
      to version 1.1.
    + [NT] Apply patch from Laurent Bigonville to check desktop files
      for missing "Icon" field.  (Closes: #854132)
  * checks/rules.{desc,pm}:
    + [NT] Drop "package-would-benefit-from-build-arch-targets".  The
      dpkg-buildpackage refuses to build packages that trigger this tag.
      Also, the tag implies two other "W" tags so contributors are still
      notified of a potential problem.
  * checks/scripts.pm:
    + [NT] Apply patch from Christopher Hoskin to except -doc packages
      from the "new-package-should-not-package-python2-module" tag.
      (Closes: #855243)
  * checks/testsuite.{desc,pm}:
    + [NT] Apply patch from Lucas Kanashiro to add a tag for recommending
      packagers to create an autopkgtest for their package.
      (Closes: #859467)
    + [NT] Fix false-positive "missing-runtime-test-file" when the
      "Tests-Directory" field is set to a single dot.  Thanks to
      Ian Jackson for reporting the issue.  (Closes: #849880)

  * coll/debian-readme{,desc}:
    + [NT] Remove.  Merge what little functionality it offers into the
      debian-readme check.

  * data/common/source-fields:
    + [NT] Add new "Testsuite-Restrictions" field.
  * data/files/standard-files:
    + [NT] Add more common files based on feedback from Helmut Grohne.
  * data/obsolete-sites/obsolete-sites:
    + [BR] Apply patch from Hideki Yamane in order to warn about
      fedorahosted.  (Closes: #856954).