@@ -9,7 +9,6 @@ Test-For:
  init.d-script-has-bad-stop-runlevel
  init.d-script-has-conflicting-start-stop
  init.d-script-has-duplicate-lsb-keyword
- init.d-script-missing-dependency-on-remote_fs
  init.d-script-missing-dependency-on-local_fs
  init.d-script-missing-lsb-short-description
  init.d-script-missing-start
