@@ -3,7 +3,6 @@ E: init.d-lsb-headers-all: init.d-script-depends-on-all-virtual-facility etc/ini
 E: init.d-lsb-headers-all: init.d-script-depends-on-all-virtual-facility etc/init.d/init.d-lsb-headers-all should-start
 E: init.d-lsb-headers-local: init.d-script-missing-dependency-on-local_fs etc/init.d/init.d-lsb-headers-local: required-start
 E: init.d-lsb-headers-parsing: init.d-script-starts-in-stop-runlevel etc/init.d/init.d-lsb-headers-parsing 0
-E: init.d-lsb-headers-remote: init.d-script-missing-dependency-on-remote_fs etc/init.d/init.d-lsb-headers-remote: required-start
 E: init.d-lsb-headers-virtual: init.d-script-depends-on-all-virtual-facility etc/init.d/init.d-lsb-headers-virtual required-stop
 E: init.d-lsb-headers-virtual: init.d-script-depends-on-unknown-virtual-facility etc/init.d/init.d-lsb-headers-virtual $something_that_doesnt_exist
 E: init.d-lsb-headers: init.d-script-should-depend-on-virtual-facility etc/init.d/init.d-lsb-headers mountall -> $local_fs
